<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
            <TextView
                android:id="@+id/tvOngoingLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_ongoing"
                android:textColor="@color/text_secondary" />
            <TextView
                android:id="@+id/tvOngoing"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="@string/format_ongoing_true" />
            <TextView
                android:id="@+id/tvFirstDateLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOngoing"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_first_date"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tvFirstDate"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOngoing"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="10 december 2012" />

            <TextView
                android:id="@+id/tvLastDateLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvFirstDate"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_last_date"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tvLastDate"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvFirstDate"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="12 december 2018" />

            <TextView
                android:id="@+id/tvOriginalLngLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvLastDate"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_original_lng"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tvOriginalLng"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvLastDate"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="en" />

            <TextView
                android:id="@+id/tvNetworksLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOriginalLng"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_networks"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tvNetworks"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOriginalLng"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="Netflix" />

            <TextView
                android:id="@+id/tvGenresLabel"
                style="@style/OverviewTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvNetworks"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingEnd="5dp"
                android:text="@string/format_genres"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tvGenres"
                style="@style/OverviewTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvNetworks"
                app:layout_constraintStart_toEndOf="@id/tvOriginalLngLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/row_paddingBottom"
                android:gravity="end"
                tools:text="Crime, Drama, Mystery, Fiction, Action and Adventure" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/vDivider1"
            android:background="@color/eye_off"
            app:layout_constraintTop_toBottomOf="@id/tvGenres"/>
        <TextView
            android:id="@+id/tvOverview"
            style="@style/OverviewTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vDivider1"
            android:lineSpacingExtra="7dp"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/row_paddingBottom"
            android:textColor="@color/text_secondary"
            tools:text="overview bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla" />

        <TextView
            android:id="@+id/tvHomepage"
            style="@style/OverviewTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOverview"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingBottom="@dimen/row_paddingBottom"
            tools:text="http:\\"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/vDivider2"
            app:layout_constraintTop_toBottomOf="@id/tvHomepage"
            android:background="@color/eye_off"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vDivider2"
            tools:listitem="@layout/season_item"
            android:id="@+id/rvSeasons"
            android:background="@color/list_bg"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>