<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:expandedTitleMarginBottom="@dimen/expandedTitle_marginBottom"
            android:fitsSystemWindows="true"
            tools:title="title">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llEpisodesHeader"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                android:fitsSystemWindows="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_height"
                    android:scaleType="centerCrop"
                    android:id="@+id/ivEpisodesHeader"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_height"
                    android:scaleType="centerCrop"
                    android:background="@drawable/gradient_filter"
                    android:alpha="0.9"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSeriesOriginalName"
                    android:layout_gravity="bottom"
                    android:paddingBottom="@dimen/originalName_paddingBottom"
                    android:paddingStart="@dimen/originalName_paddingHorizontal"
                    android:paddingEnd="@dimen/originalName_paddingHorizontal"
                    android:textSize="@dimen/originalName_textSize"
                    android:textColor="?attr/colorOnPrimary"
                    style="@style/OverviewTextViewStyle"
                    tools:text="How to get away with murder"/>
            </FrameLayout>
            <!--Toolbar must be here to be above other elements-->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolBarStyle"
                app:navigationIcon="?homeAsUpIndicator"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="?attr/colorSurface"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:id="@+id/tvInfo"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    tools:text="2019 - 2020 | 35m | TV-MA" />

                <TextView
                    android:id="@+id/tvLastDateLabel"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingEnd="5dp"
                    android:text="@string/format_next_episode"
                    android:textColor="@color/text_secondary" />
                <TextView
                    android:id="@+id/tvLastDate"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvInfo"
                    app:layout_constraintStart_toEndOf="@id/tvLastDateLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    android:gravity="end"
                    tools:text="12 december 2018" />

                <TextView
                    android:id="@+id/tvNetworksLabel"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLastDate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingEnd="5dp"
                    android:text="@string/format_networks"
                    android:textColor="@color/text_secondary" />

                <TextView
                    android:id="@+id/tvNetworks"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLastDate"
                    app:layout_constraintStart_toEndOf="@id/tvLastDateLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    android:gravity="end"
                    tools:text="Netflix" />

                <TextView
                    android:id="@+id/tvGenresLabel"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvNetworks"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingEnd="5dp"
                    android:text="@string/format_genres"
                    android:textColor="@color/text_secondary" />

                <TextView
                    android:id="@+id/tvGenres"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvNetworks"
                    app:layout_constraintStart_toEndOf="@id/tvLastDateLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    android:gravity="end"
                    tools:text="Crime, Drama, Mystery, Fiction, Action and Adventure" />

                <TextView
                    android:id="@+id/tvOverview"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvGenres"
                    android:lineSpacingExtra="7dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    android:textColor="@color/text_secondary"
                    tools:text="overview bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/cast_item"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:background="?attr/colorSurface"
                    app:layout_constraintTop_toBottomOf="@id/tvOverview"/>
                <TextView
                    android:id="@+id/tvHomepage"
                    style="@style/OverviewTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/rvCast"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:paddingBottom="@dimen/row_paddingBottom"
                    tools:text="http:\\"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/vDivider2"
                    app:layout_constraintTop_toBottomOf="@id/tvHomepage"
                    android:background="@color/eye_off"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/season_item"
                android:id="@+id/rvSeasons"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_not_favorite"
        app:tint="?attr/colorOnPrimary"
        style="@style/FabStyle"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>